Layout * map is now in fullscreen * copyright lable is in the middle left and smaller * buttons for GPS are no longer in the footer and overlapping the map * removed openlayer controlls

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -172,3 +172,24 @@ h1 {
 .checkbox-design-switch input[type=checkbox]:checked + label:after {
     opacity: 1;
 }
+
+#copyright{
+    top: 50%;
+    margin-left: -45px;
+    position: absolute;
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    z-index: 1000;
+    transform: rotate(90deg);
+}
+
+#map{
+    z-index: 0;
+}
+
+#footer{
+    position: absolute;
+    margin-top: -25px;
+    margin-left: 5px;
+    z-index: 1000;
+}
