--- a/www/css/map.css
+++ b/www/css/map.css
@@ -2,20 +2,20 @@ html,body {
   background-color: #000000;
   height: 100%;
   width: 100%;
-  margin: 1%; padding: 0;
+  margin: 0%; padding: 0;
   font-family: Verdana, Arial;
   font-size: 1em;
   overflow: hidden;
-  color: #ffffff;
+  color: #000000;
 }
 
 a {
-  color: #ffff00;
+  color: #000080;
   text-decoration: none;
 }
 
 a:hover {
-  color: #ffff00;
+  color: #000080;
   text-decoration: underline;
 }
 
@@ -27,8 +27,8 @@ a:hover {
 }
 
 #map {
-  height: 86%;
-  width: 96%;
+  height: 100%;
+  width: 100%;
   padding: 0; margin: 0;
 }
 
